test/lexer/error/err_03_invalid_assign_1.pl0
program invalid_assign;
var x;
begin
  x : 1;  // Missing = after :
end
